WIP fixed unresolved modules issue.  Cause was import path was too long.

--- a/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -4,3 +4,32 @@ body {
   padding: 0.4rem;
   font-family: sans-serif;
 }
+
+.imageThumbnail {
+  margin-top: 10px;
+  width: 10%;  
+  height: 50px;
+}
+/* test styles */
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
+.thumbnail {
+  margin-top: 10px;
+  width: 10%;
+}
+.thumbnail img {
+  width: 50px;
+  height: 50px;
+}
+.header-section {
+  width: 90%;
+}
+.title {
+  display: flex;
+  align-items: center;
+}
+.title h1 {    
+  margin-right: 10px;
+}
